--- a/terraform/examples/io500/remote_run.config.template
+++ b/terraform/examples/io500/remote_run.config.template
@@ -32,15 +32,15 @@ SSH_USER="daos-user"
 DAOS_ALLOW_INSECURE="true"
 
 # Server(s)
-DAOS_SERVER_INSTANCE_COUNT="1"
+DAOS_SERVER_INSTANCE_COUNT="4"
 DAOS_SERVER_MACHINE_TYPE=n2-custom-36-262144
-DAOS_SERVER_DISK_COUNT=8
+DAOS_SERVER_DISK_COUNT=16
 DAOS_SERVER_CRT_TIMEOUT=300
 DAOS_SERVER_SCM_SIZE=200
 DAOS_SERVER_GVNIC=true
 
 # Client(s)
-DAOS_CLIENT_INSTANCE_COUNT="1"
+DAOS_CLIENT_INSTANCE_COUNT="4"
 DAOS_CLIENT_MACHINE_TYPE=c2-standard-60
 DAOS_CLIENT_GVNIC=true
 
@@ -49,6 +49,7 @@ DAOS_POOL_SIZE="$(awk -v disk_count=${DAOS_SERVER_DISK_COUNT} -v server_count=${
 DAOS_CONT_REPLICATION_FACTOR="${daos_cont_props}"
 
 # IO500
+IO500_INI=${io500_ini}
 IO500_STONEWALL_TIME=${duration_in_seconds}  # Number of seconds to run the benchmark
 
 # ------------------------------------------------------------------------------
